objects/JBCXM__StatePreservation__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__C360SectionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C360 Sections</label>
        <referenceTo>JBCXM__C360Sections__c</referenceTo>
        <relationshipLabel>User state preservation</relationshipLabel>
        <relationshipName>User_state_preservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClientSideFilter__c</fullName>
        <label>Client Side Filters</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DashboardContainerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DashboardContainerId</label>
        <referenceTo>JBCXM__DashboardContainer__c</referenceTo>
        <relationshipLabel>StatePreservation</relationshipLabel>
        <relationshipName>StatePreservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DashboardId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DashboardId</label>
        <referenceTo>JBCXM__Dashboard__c</referenceTo>
        <relationshipLabel>StatePreservation</relationshipLabel>
        <relationshipName>StatePreservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>EntityType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GlobalFilters__c</fullName>
        <label>User Global Filters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__HavingParams__c</fullName>
        <label>Having Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Section</label>
        <referenceTo>JBCXM__GSRelationshipSection__c</referenceTo>
        <relationshipLabel>User state preservation</relationshipLabel>
        <relationshipName>User_state_preservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship Type</relationshipLabel>
        <relationshipName>StatePreservationRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportParams__c</fullName>
        <defaultValue>&apos;[]&apos;</defaultValue>
        <label>ReportParams</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ServerSideFilters__c</fullName>
        <label>Server Side Filters</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SortColumns__c</fullName>
        <label>SortColumns</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubSection__c</fullName>
        <description>It stores the sub tab details</description>
        <label>SubSection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__UIViewId__c</fullName>
        <label>UI Views</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__UIView__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UI View Id</label>
        <referenceTo>JBCXM__UIViews__c</referenceTo>
        <relationshipLabel>User state preservation</relationshipLabel>
        <relationshipName>User_state_preservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserSessionId__c</fullName>
        <label>Session id by User</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_State_Preservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User state preservation</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User state preservation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>